force-app/main/default/objects/Task_Sequence__mdt/Task_Sequence__mdt.object-meta.xml
<CustomObject>
    <label>Task Sequence</label>
    <pluralLabel>Task Sequences</pluralLabel>
</CustomObject>