force-app/main/default/objects/Task_Sequence__mdt/fields/Auto_Assign_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_To_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign To Owner</label>
    <type>Checkbox</type>
</CustomField>